# trust-wedo

./: .dockerignore  .gitignore  ACCEPTANCE_TESTS.md  CHANGELOG.md  CLI.md  DEVELOPMENT_BLUEPRINT.md  DEVELOPMENT_STATUS.md  Dockerfile  ENGINEERING_DECISIONS.md  ISSUES.md  MVP_BEHAVIOR.md  PHASE3_PLANNING.md  PRODUCT.md  README.md  pyproject.toml  zeabur.json  🚀 Trust WEDO 專案啟動指令.md
.github/workflows/: ci.yml
apps/backend/: .env.example  Dockerfile  debug_wiki.py  diag_import.py  requirements.txt  test_difficult_sites.py  test_pw_launch.py  trust_wedo  zeabur.json
apps/backend/alembic/: env.py
apps/backend/app/: config.py  main.py
apps/landing/: .env.example  BRAND_COLORS.md  CLOUDFLARE_PAGES_DEPLOYMENT.md  COPYWRITING.md  ISSUES.md  LOGO_PHILOSOPHY.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js
apps/landing/src/: App.tsx  (+1 more)
docs/: FRONTEND_URL_QUICK_REF.md  FRONTEND_URL_SETUP.md  PDF_REPORT_GENERATION.md  TRUST_WEDO_CODE_REVIEW_AND_FIX.md  TRUST_WEDO_PRODUCTION_FIX_FINAL.md  TRUST_WEDO_SCORING_SYSTEM_IMPROVEMENT_PROPOSAL.md
docs/technical-specs/: AI_CITATION_ENGINEERING.md  PHASE0_1_SPECS.md  PHASE2_SPECS.md  README.md
samples/: sample_entity.json  sample_page.html
samples/expected_outputs/: afb.json  citation_eval.json  entity_graph.json  site.json
schemas/: afb.schema.json  capture.schema.json  citation_eval.schema.json  diff.schema.json  entity_graph.schema.json  entity_profile.schema.json  site_scan.schema.json
scripts/: check_db_schema.py  check_env.py  get_latest_scan.py  inspect_supabase.py  verify_mvp.sh  verify_playwright.py  verify_progress.py  verify_scoring_2.0.py
src/trust_wedo/: __init__.py  cli.py
supabase/migrations/: 20260215_add_result_column_to_scan_jobs.sql
tests/integration/: test_capture_flow.py  test_diff_flow.py  test_gates.py
tests/unit/: test_capture.py  test_ccs.py  test_diff.py  test_ec.py  test_graph.py  test_report.py  test_similarity.py
(+103 files in other folders)
